feat: moderniza backend para Java 21 e refatora camadas
Boot 3.5.4, AWS SDK v2, JJWT 0.12 com HMAC e rotacao de refresh, security sem Profile prod, handlers com traceId, entidades sem Data com LocalDateTime e uniques, repos com Page e Modifying, services idempotentes com Support, controllers com PUT 201 e 204 e paginacao real.